src/objects/WRNA__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aWRNAs</relationshipLabel>
        <relationshipName>aWRNAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <formula>substitute(substitute(

if( WRNA_Risk_Factor_Employment_Financial__c &gt;= 5, &quot;Employment/Financial, &quot;, &quot;&quot;) + 
if( WRNA_Risk_Factor_Housing_Safety__c &gt;= 2, &quot;Housing Safety, &quot;, &quot;&quot;) + 
if( WRNA_RF_Anger_hostility__c &gt;= 4, &quot;Anger/Hostility, &quot;, &quot;&quot;) + 
if( WRNA_RF_History_of_mental_illness__c &gt;= 3, &quot;History of Mental Illness, &quot;, &quot;&quot;) + 
if( WRNA_RF_Depression_anxiety__c &gt;= 3, &quot;Depression/Anxiety, &quot;, &quot;&quot;) + 
if( WRNA_RF_Psychosis__c &gt;= 1, &quot;Psychosis, &quot;, &quot;&quot;) + 
if( WRNA_RF_Child_abuse__c &gt;= 1, &quot;Child Abuse, &quot;, &quot;&quot;) + 
if( WRNA_RF_Adult_Abuse__c &gt;= 1, &quot;Adult Abuse, &quot;, &quot;&quot;) + 
if( WRNA_RF_Physical_Abuse__c &gt;= 1, &quot;Physical Abuse, &quot;, &quot;&quot;) + 
if( WRNA_RF_Sexual_Abuse__c &gt;= 1, &quot;Sexual Abuse, &quot;, &quot;&quot;) + 
if( WRNA_RF_PTSD__c &gt;= 2, &quot;PTSD, &quot;, &quot;&quot;) + 
if( WRNA_RF_Family_Conflict__c &gt;= 2, &quot;Family Conflict, &quot;, &quot;&quot;) + 
if( WRNA_RF_Relationship_Dysfunction__c &gt;= 8, &quot;Relationship Dysfunction, &quot;, &quot;&quot;) + 
if( WRNA_RF_Parental_Stress__c &gt;= 20, &quot;Parental Stress, &quot;, &quot;&quot;) + &quot;MMM&quot;,

&quot;, MMM&quot;, &quot;&quot;), &quot;MMM&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Factors</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Adult_Abuse__c</fullName>
        <label>Adult Abuse</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Anger_hostility__c</fullName>
        <label>Anger/hostility</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Child_abuse__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Child abuse</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Depression_anxiety__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Depression/anxiety</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Family_Conflict__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Family Conflict</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_History_of_mental_illness__c</fullName>
        <defaultValue>0</defaultValue>
        <label>History of mental illness</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_PTSD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PTSD</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Parental_Stress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Parental Stress</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Physical_Abuse__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Physical Abuse</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Psychosis__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Psychosis</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Relationship_Dysfunction__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relationship Dysfunction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_RF_Sexual_Abuse__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sexual Abuse</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_Risk_Factor_Employment_Financial__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Employment/Financia</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_Risk_Factor_Housing_Safety__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Housing Safety</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_STR_Educational_Strengths__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Educational Strengths</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_STR_Family_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Family Support</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_STR_Parental_Involvement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Parental Involvement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_STR_Relationship_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relationship Support</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRNA_STR_Self_efficacy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Self-efficacy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>aWRNA</label>
    <nameField>
        <label>aWRNA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aWRNAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>